[package]
name = "qdb"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
num_cpus = "1.13"


[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[lib]
bench = false

[[bench]]
name = "query_pipeline" # Replace with your desired benchmark name
harness = false